--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header, main {
   text-align: center;
 }
 
-.container {
+.container-score {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -34,15 +34,20 @@ h1 {
 }
 
 h2 {
-  font-size: 42px;
-  font-weight: bold;
-}
-
-h3 {
   font-size: 36px;
   font-weight: 700;
 }
 
 p {
   font-size: 24px;
+}
+
+.btn-reset {
+  border-radius: 20%;
+  background-color: red;
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
+  padding: 18px;
+  border: 0;
 }
